--- a/main.html
+++ b/main.html
@@ -16,7 +16,9 @@
 				<option>White</option> 
 				<option>Black</option> 
 			</select> 
-			<input type="button" value="Select and Remove"> 
+			<input onclick="removeOptions()" type="button" value="Select and Remove"> 
+		</form>
+ 
 		</form>
 
 		<script type="text/javascript" src="./script.js">
